tutum-service.yml
kind: Service
apiVersion: v1
metadata:
  name: tutum
spec:
  selector:
    app: tutum
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
